# unsupervised-anomaly-detection

./: .gitignore  README.md  mvtec-ipynb.ipynb  pyproject.toml  requirements.txt  train_dfr.py  train_padim.py  train_regad.py
DFR/: README.md  config.yaml  datasets.py  inference_cam.py  inference_image.py  inference_video.py  requirements.txt  train.py
DFR/models/: __init__.py  dfr.py
PaDiM/: PaDiM.ipynb  README.md  config.yaml  datasets.py  inference_cam.py  inference_image.py  inference_video.py  load_config.py  padim.py  requirements.txt  train.py
Padim/: __init__.py  padim.py
RegAD/: README.md  __init__.py  config.yaml  inference_cam.py  inference_image.py  inference_video.py  requirements.txt  train_many.py  train_one_class.py
RegAD/datasets/: __init__.py  generate_sup.py  many_class_dataset.py  one_class_dataset.py
RegAD/models/: regad.py  stn.py
RegAD/support_set/: support_set.pt
RegAD/utils/: funcs.py
cfg/: dfr_config.yaml  regad_config.yaml
configs/: dfr_config.yaml  padim_config.yaml  regad_config.yaml
notebooks/: Unsupervised_AD.ipynb
src/DFR/: __init__.py
src/DFR/models/: dfr.py  encoder.py  feature_extractor.py
src/Padim/: __init__.py  padim.py
src/RegAD/: __init__.py  loss.py
src/RegAD/models/: __init__.py  regad.py  siamese.py  stn.py
src/load_config/: __init__.py
train/: train_dfr.py  train_padim.py  train_regad.py
